--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#dcdcdc</color>
     <color name="pale_gray">#E5E4E2</color>
+
+    <color name="action_element_color">#8068F0</color>>
 </resources>
